--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -13,15 +13,15 @@ theme:
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default 
-      primary: deep orange
-      accent: deep orange
+      primary: black
+      accent: light blue
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: deep orange
-      accent: deep orange
+      primary: black
+      accent: light blue
       toggle:
         icon: material/brightness-4
         name: Switch to system preference  
