--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,20 +1,98 @@
-LDAP_URL="ldap://127.0.0.1/"
-LDAP_DN="dc=example,dc=com"
-LDAP_VM_DN="ou=proups,dc=example,dc=com"
-LDAP_USER_DN="ou=people,dc=example,dc=com"
-LDAP_ADMIN_USER="admin"
-LDAP_ADMIN_PASS="samplepass"
-LDAP_BASE_GROUP_ID=5000
-VNC_HOSTNAME="192.168.0.62"
-ALGORITHM="HS256"
-SECRET_KEY="jwtsecretkey"
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-API_ADMIN_USER="trcadmin"
-PROXMOX_HOST="192.168.49.2"
-PROXMOX_BASE_URL="https://127.0.0.1"
-PROXMOX_BASE_PORT=8006
-PROXMOX_NODE_NAME="mynodename"
+# The following environment variables are split into three sections
+# 1. Mandatory Variables
+# 2. Optional Variables
+# 3. Don't Touch Unless You Know What You Are Doing Variables
+
+
+######################### Mandatory Variables #########################
+#   The following variables must be configured for the application to work
+
+# The URL to connect to the LDAP Server
+# eg: ldap://127.0.0.1/
+LDAP_URL=""
+
+# Base DN for LDAP server. This is created when you setup your LDAP server
+# eg: dc=example,dc=com
+LDAP_DN=""
+
+# The DN to the group that contains the VMs
+# eg: ou=groups,dc=example,dc=com
+LDAP_VM_DN=""
+
+# The DN to the group that contains the users
+# eg: ou=people,dc=example,dc=com
+LDAP_USER_DN=""
+
+# LDAP Admin User that has write access to the LDAP server
+# Use the same user that you used to setup the LDAP server
+# eg: admin
+LDAP_ADMIN_USER=""
+
+# LDAP Admin Password for the above user
+LDAP_ADMIN_PASS=""
+
+# The IP address for guacamole daemon to connect to for accessing VNC output
+# This is usually the IP address of the proxmox server
+# eg: 192.168.3.4
+VNC_HOSTNAME=""
+
+# JWT Secret Key for the application, used to sign the JWT tokens
+# run the following command to generate a secret key
+# openssl rand -hex 32
+SECRET_KEY=""
+
+# The username for the admin user of the application
+# This user is used to login to the bulk VM creation UI
+# You can make one up here. It does not have to exist in the LDAP server
+# eg: webadmin
+API_ADMIN_USER=""
+
+# Proxmox IP address or hostname. This is used to send WOL packets to the start VMs
+# If you only have a single network interface on the proxmox server, this will be same as VNC_HOSTNAME,
+# If not, set it to the IP address that you tested WOL packets wit, during the setup
+# eg: 192.168.3.4
+PROXMOX_HOST=""
+
+# Proxmox URL to send API requests. This is used to create and manage VMs through REST APIs
+# Same as the URL you use to access the Proxmox web interface but without the port number
+# eg: https://192.168.3.4
+PROXMOX_BASE_URL=""
+
+# Proxmox Node Name. This is the name of the node in the proxmox cluster where the VMs are created
+PROXMOX_NODE_NAME=""
+
+# Proxmox API Token. This is used to authenticate the application to the Proxmox server
+# Learn how to create one from: https://pve.proxmox.com/pve-docs/chapter-pveum.html#pveum_tokens
+# Usually its created by going to the Proxmox web interface -> Datacenter -> Permissions -> API Tokens
+# NOTE: You must **uncheck** the privilage seperation checkbox when creating the token
 PROXMOX_ACCESS_TOKEN="pve_api_token"
-PROXMOX_VM_NETBRIDGE="vmbr1"
-PROXMOX_VM_CONFIG_DIR="./qemu-server"
+
+# Proxmox VM Network Bridge. This is the network bridge on the proxmox server where the VMs will be connected to
+# eg: vmbr0
+PROXMOX_VM_NETBRIDGE=""
+######################### Optional Variables ###########################
+#  The following variables are optional and can be configured based on your requirements
+#  Sane defaults are provided.
+
+# Determines how long a user is logged in on the application (in minutes)
+# After this time, the user will have to login again to create VMs through the web interface
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Proxmox API Port. usually same port as the proxmox web interface
+PROXMOX_BASE_PORT=8006
+
+# Proxmox VM config directory. This is the directory where the VM config files are stored on the proxmox server
+PROXMOX_VM_CONFIG_DIR="/etc/pve/qemu-server"
+
+######################### Don't Touch Unless You Know What You Are Doing Variables #########################
+
+# UNIX Group ID for LDAP users.
+LDAP_BASE_GROUP_ID=5000
+
+# JWT Algorithm to used for signing the tokens
+ALGORITHM="HS256"
+
+# Allowed CSV Fields for the bulk VM creation
+# These are the fields that are allowed in the CSV file that is uploaded to create VMs
+# The fields must match the fields in the CSV file
 ALLOWED_CSV_FIELDS=["first_name","last_name"]
